🌿 Cleanup and code update